--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <h1 class="navbar-title">DogCat</h1>
 </div>
 <nav class="navbar-menu">
-<!--  -->
+<!-- Content -->
 </nav>
 </nav>
 <div class="container">
