--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <span class="burguer-icon"></span>
 </button>
 <div class="navbar-logo">
-<img class="navbar-image" src="assets/logo dogcat.webp"/>
+<img class="navbar-image" src="assets/logo.webp"/>
 <h1 class="navbar-title">DogCat</h1>
 </div>
 <nav class="navbar-menu">
