--- a/public/options.html
+++ b/public/options.html
@@ -6,6 +6,19 @@
     <link rel="stylesheet" href="css/options.css" />
 </head>
 <body>
+<nav class="navbar">
+<div class="navbar-container">
+<div class="navbar-header">
+<div class="navbar-logo"></div>
+<span id="navbar-title">DogCat</span>
+</div>
+<div class="navbar-menu" id="open-navbar1">
+<ul class="navbar-nav">
+<li><a href="#">Volver</a></li>
+</ul>
+</div>
+</div>
+</nav>
 <div class="container">
 <div class="left">
 <div class="options">
@@ -17,9 +30,11 @@
 </button>
 </div>
 </div>
+<div class="option-title-1">
+<span>Perros</span>
 </div>
 </div>
-<!-- Container -->
+</div>
 </div>
 <div class="right">
 <div class="options">
@@ -31,9 +46,12 @@
 </button>
 </div>
 </div>
+<div class="option-title-2">
+<span>Gatos</span>
+</div>
+</div>
 </div>
 <!-- Container -->
-</div>
 </div>
 </div>
 </div>
