--- a/public/Catalogo_cats.html
+++ b/public/Catalogo_cats.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/cat_dogs.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script type="text/javascript" src="js/main.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
@@ -32,8 +33,8 @@ defer>
 </button>
 <button class="button_again">VOLVER</button>
 <nav class="navbar-menu" style="padding: 10px;">
-<button class="button_adopcion" >ADOPTA UN PERRO</button>
-<button class="button_adopcion">ADOPTA UN GATO</button>
+<button class="button_adopcion" onclick="select('dogs')" >ADOPTA UN PERRO</button>
+<button class="button_adopcion" onclick="select('cats')">ADOPTA UN GATO</button>
 </nav>
 </nav>
 
@@ -82,7 +83,7 @@ defer>
 <img src="images/gato_catalogo.jpg" alt="">
 <h2 style="text-align:center; color: white;"> Nombre</h2>
 <div class="buscador_category" style="text-align:center; margin:20px;">
-<button class="button_adopcion2">CONOCEME</button>
+<button class="button_adopcion2" onclick="select('descriptions')">CONOCEME</button>
 <button class="button_adopcion3">ADOPTAME</button>
 </div>
 </div>
@@ -90,7 +91,7 @@ defer>
     <img src="images/gato_catalogo.jpg" alt="">
     <h2 style="text-align:center; color: white;"> Nombre</h2>
     <div class="buscador_category" style="text-align:center; margin:20px;">
-    <button class="button_adopcion2">CONOCEME</button>
+    <button class="button_adopcion2" onclick="select('descriptions')">CONOCEME</button>
     <button class="button_adopcion3">ADOPTAME</button>
     </div>
     </div>
@@ -99,7 +100,7 @@ defer>
         <img src="images/gato_catalogo.jpg" alt="">
         <h2 style="text-align:center; color: white;"> Nombre</h2>
         <div class="buscador_category" style="text-align:center; margin:20px;">
-        <button class="button_adopcion2">CONOCEME</button>
+        <button class="button_adopcion2" onclick="select('descriptions')">CONOCEME</button>
         <button class="button_adopcion3">ADOPTAME</button>
         </div>
         </div>
@@ -108,7 +109,7 @@ defer>
             <img src="images/gato_catalogo.jpg" alt="">
             <h2 style="text-align:center; color: white;"> Nombre</h2>
             <div class="buscador_category" style="text-align:center; margin:20px;">
-            <button class="button_adopcion2">CONOCEME</button>
+            <button class="button_adopcion2" onclick="select('descriptions')">CONOCEME</button>
             <button class="button_adopcion3">ADOPTAME</button>
             </div>
             </div>
@@ -116,7 +117,7 @@ defer>
                 <img src="images/gato_catalogo.jpg" alt="">
                 <h2 style="text-align:center; color: white;"> Nombre</h2>
                 <div class="buscador_category" style="text-align:center; margin:20px;">
-                <button class="button_adopcion2">CONOCEME</button>
+                <button class="button_adopcion2" onclick="select('descriptions')">CONOCEME</button>
                 <button class="button_adopcion3">ADOPTAME</button>
                 </div>
                 </div>
@@ -124,7 +125,7 @@ defer>
                     <img src="images/gato_catalogo.jpg" alt="">
                     <h2 style="text-align:center; color: white;"> Nombre</h2>
                     <div class="buscador_category" style="text-align:center; margin:20px;">
-                    <button class="button_adopcion2">CONOCEME</button>
+                    <button class="button_adopcion2" onclick="select('descriptions')">CONOCEME</button>
                     <button class="button_adopcion3">ADOPTAME</button>
                     </div>
                     </div>
@@ -132,7 +133,7 @@ defer>
                         <img src="images/gato_catalogo.jpg" alt="">
                         <h2 style="text-align:center; color: white;"> Nombre</h2>
                         <div class="buscador_category" style="text-align:center; margin:20px;">
-                        <button class="button_adopcion2">CONOCEME</button>
+                        <button class="button_adopcion2" onclick="select('descriptions')">CONOCEME</button>
                         <button class="button_adopcion3">ADOPTAME</button>
                         </div>
                         </div>
@@ -140,7 +141,7 @@ defer>
                             <img src="images/gato_catalogo.jpg" alt="">
                             <h2 style="text-align:center; color: white;"> Nombre</h2>
                             <div class="buscador_category" style="text-align:center; margin:20px;">
-                            <button class="button_adopcion2">CONOCEME</button>
+                            <button class="button_adopcion2" onclick="select('descriptions')">CONOCEME</button>
                             <button class="button_adopcion3">ADOPTAME</button>
                             </div>
                             </div>
