--- a/public/Catalogo_dogs.html
+++ b/public/Catalogo_dogs.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/cat_dogs.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script type="text/javascript" src="js/main.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
@@ -32,11 +33,10 @@ defer>
 </button>
 <button class="button_again">VOLVER</button>
 <nav class="navbar-menu" style="padding: 10px;">
-<button class="button_adopcion" >ADOPTA UN PERRO</button>
-<button class="button_adopcion">ADOPTA UN GATO</button>
+<button class="button_adopcion" onclick="select('dogs')" >ADOPTA UN PERRO</button>
+<button class="button_adopcion" onclick="select('cats')">ADOPTA UN GATO</button>
 </nav>
 </nav>
-
 
 
 <div class="container" >
