--- a/public/admin.html
+++ b/public/admin.html
@@ -3,7 +3,9 @@
 <head>
     <title>Dog Cat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/admin.css" /></head>
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/admin.css" />
+</head>
 <body>
 <nav class="navbar">
 <div class="navbar-cont">
@@ -49,8 +51,8 @@
             <td>8</td>
             <td>0</td>
             <td>
-            <button style="display:block;">Editar</button>
-            <button style="display:block;">Eliminar</button>
+            <button class="action-edit"><span class="icon"></span>Editar</button>
+            <button class="action-delete">Eliminar</button>
             </td>
           </tr>
       </tbody>
