--- a/public/options.html
+++ b/public/options.html
@@ -14,7 +14,7 @@
 </div>
 <div class="navbar-menu" id="open-navbar1">
 <ul class="navbar-nav">
-<li><a href="#">Volver</a></li>
+<li><a href="index.html">Volver</a></li>
 </ul>
 </div>
 </div>
