--- a/public/Description_dogs.html
+++ b/public/Description_dogs.html
@@ -30,7 +30,7 @@
 </div>
 <div class="foto-mascota">
     <div class="foto-adopcion">
-        <img src="images/gato_catalogo.jpg" alt="" >
+        <img src="images/perro_catalogo.jpg" alt="" >
         </div>
     
 
@@ -67,34 +67,34 @@
     <div class="store-adopt">
     <section class="product-animals2">
         <div class="product-item" category="">
-            <img src="images/gato_catalogo.jpg" alt="">
+            <img src="images/perro_catalogo.jpg" alt="">
             <h2 class="nombre_mascota" > Nombre</h2>
             <div class="buscador_category" style="text-align:center; margin:20px;">
-            <button class="button_adopcion2" onclick="conocecat('conocer')">CONOCER</button>
+            <button class="button_adopcion2" onclick="newdoc('conocer')">CONOCER</button>
             <button class="button_adopcion3">ADOPTAME</button>
             </div>
             </div>
             <div class="product-item" category="">
-                <img src="images/gato_catalogo.jpg" alt="">
+                <img src="images/perro_catalogo.jpg" alt="">
                 <h2 class="nombre_mascota" > Nombre</h2>
                 <div class="buscador_category" style="text-align:center; margin:20px;">
-                <button class="button_adopcion2" onclick="conocecat('conocer')">CONOCER</button>
+                <button class="button_adopcion2" onclick="newdoc('conocer')">CONOCER</button>
                 <button class="button_adopcion3">ADOPTAME</button>
                 </div>
                 </div>
                 <div class="product-item" category="">
-                    <img src="images/gato_catalogo.jpg" alt="">
+                    <img src="images/perro_catalogo.jpg" alt="">
                     <h2 class="nombre_mascota" > Nombre</h2>
                     <div class="buscador_category" style="text-align:center; margin:20px;">
-                    <button class="button_adopcion2" onclick="conocecat('conocer')">CONOCER</button>
+                    <button class="button_adopcion2" onclick="newdoc('conocer')">CONOCER</button>
                     <button class="button_adopcion3">ADOPTAME</button>
                     </div>
                     </div>
                     <div class="product-item" category="">
-                        <img src="images/gato_catalogo.jpg" alt="">
+                        <img src="images/perro_catalogo.jpg" alt="">
                         <h2 class="nombre_mascota" > Nombre</h2>
                         <div class="buscador_category" style="text-align:center; margin:20px;">
-                        <button class="button_adopcion2" onclick="conocecat('conocer')">CONOCER</button>
+                        <button class="button_adopcion2" onclick="newdoc('conocer')">CONOCER</button>
                         <button class="button_adopcion3">ADOPTAME</button>
                         </div>
                         </div>
