--- a/public/admin.html
+++ b/public/admin.html
@@ -89,8 +89,8 @@
 </div>
 <button>Perfil</button>
 <div class="submenu"><a>Catálogo de mascotas</a>
-<button>Catálogo de perros</button>
-<button>Catálogo de gatos</button>
+<button onclick="window.location.href = 'Catalogo_dogs.html'">Catálogo de perros</button>
+<button onclick="window.location.href = 'Catalogo_cats.html'">Catálogo de gatos</button>
 </div>
 <button>Solicitudes de acogida</button>
 <button>Solicitudes de adopción</button>
