--- a/public/admin.html
+++ b/public/admin.html
@@ -95,7 +95,6 @@
 <button>Solicitudes de acogida</button>
 <button>Solicitudes de adopción</button>
 <button>Donaciones</button>
-
 </nav>
 <div class="content-right">
   <div id="image-right"></div>
@@ -105,7 +104,7 @@
 </nav>
 <div class="container">
 <div class="table">
-    <table id="tabs">
+    <table>
         <caption>Gestión de mascotas</caption>
         <thead>
           <tr>
@@ -122,23 +121,7 @@
             <th>Acciones</th>
           </tr>
       </thead>
-      <tbody>
-          <!-- <tr>
-            <td>0</td>
-            <td>5</td>
-            <td>8</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-            <td>5</td>
-            <td>8</td>
-            <td>0</td>
-            <td>
-            <button class="action-edit"><span class="icon-edit"></span>Editar</button>
-            <button class="action-delete"><span class="icon-delete"></span>Eliminar</button>
-            </td>
-          </tr> -->
-      </tbody>
+      <tbody id="tab-body"></tbody>
     </table>
 </div>
 </div>
