--- a/public/about.html
+++ b/public/about.html
@@ -24,7 +24,8 @@ defer>
 <div class="container">
 <div id="map"></div>
 </div>
-<script type="module" src="js/firebase-db.js"></script>
+<script type="module" src="js/backend.js"></script>
+<script type="text/javascript" src="js/hello.all.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <footer>
 </footer>
