--- a/public/Catalogo_cats.html
+++ b/public/Catalogo_cats.html
@@ -19,6 +19,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+<!-- Script de carrusel del modo responsivo -->
+
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script>
     var current = 0;
@@ -69,6 +72,8 @@
      });
     </script>
 
+    <!-- fin del script de carrusel del modo responsivo -->
+
 </head>
     <script
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKH3MFAxTeIHbLHs7KzJnp8xkFsmheCCo&callback=initMap&libraries=&v=weekly"
@@ -91,12 +96,15 @@ defer>
     </nav>
     </nav>
 
-
+<!--  Inicio de la pagina -->
 
     <div class="container" >
       <h1 id="title_dogs">Gatos en espera de adopción....</h1>
       
       
+      <!-- Seccion de categoria de busqueda -->
+
+
       <div class="store-adopt">
           <div class="category-list" style="background-color: #F6D581;">
               <h2 class="title_cat">Nombre de la mascota</h2>
@@ -126,7 +134,7 @@ defer>
               </div>
           </div>
 
-
+<!-- Seccion de catalogo de mascotas de pagina web -->
 
           <section class="product-animals">
 
@@ -197,9 +205,14 @@ defer>
             </section>
 </div>
 
+
+<!-- Seccion de pagina catalogo modo responsivo -->
+
 <div class="version_resp">
   <h1 id="title_dogs">Gatos en espera de adopción....</h1>
   </div>
+
+  <!-- Seccion de catalogo modo carrusel -->
 
 <div id="carrusel">
   <a href="#" class="left-arrow"><img src="images/left-arrow.png" /></a>
