--- a/public/Catalogo_dogs.html
+++ b/public/Catalogo_dogs.html
@@ -20,6 +20,8 @@
       referrerpolicy="no-referrer"
     />
 
+    <!-- Script de carrusel del modo responsivo -->
+
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script>
     var current = 0;
@@ -70,6 +72,8 @@
      });
     </script>
 
+        <!-- fin del script de carrusel del modo responsivo -->
+
 
 </head>
     <script
@@ -93,10 +97,16 @@ defer>
 </nav>
 
 
+<!--  Inicio de la pagina -->
+
+
 <div class="container" >
 
 
 <h1 id="title_dogs">Perros en espera de adopción....</h1>
+
+
+      <!-- Seccion de categoria de busqueda -->
 
 
 <div class="store-adopt">
@@ -129,6 +139,7 @@ defer>
     </div>
 
 
+<!-- Seccion de catalogo de mascotas de pagina web -->
 
 <section class="product-animals">
 
@@ -202,9 +213,19 @@ defer>
 </section>
 
 </div>
+
+<!-- Seccion de pagina catalogo modo responsivo -->
+
+
 <div class="version_resp">
 <h1 id="title_dogs">Perros en espera de adopción....</h1>
 </div>
+
+
+
+  <!-- Seccion de catalogo modo carrusel -->
+
+
 <div id="carrusel">
   <a href="#" class="left-arrow"><img src="images/left-arrow.png" /></a>
   <a href="#" class="right-arrow"><img src="images/right-arrow.png" /></a>
