--- a/public/Description_dogs.html
+++ b/public/Description_dogs.html
@@ -11,6 +11,10 @@
     <script type="text/javascript" src="js/main.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+
+
+    <!-- Script de carrusel del modo responsivo -->
+
     <script>
     var current = 0;
     var imagenes = new Array();
@@ -60,6 +64,8 @@
      });
     </script>
 
+<!-- fin del script de carrusel del modo responsivo -->
+
 
 </head>
 
@@ -76,6 +82,10 @@
 </nav>
 </nav>
 
+
+<!-- inicio depagina de descripcion de la mascota -->
+
+
 <div class="container" style="min-height: 80vh;" >
     <div class="foto_description" >
         <h1 id="title_foto">FOTOS</h1>
@@ -86,6 +96,7 @@
         <img src="images/perro_catalogo.jpg" alt="" >
         </div>
     
+<!-- seccion de descripcion de la mascota -->
 
     <section class="detalles-animal">
         <div class="detalle-animales" category="">
@@ -112,6 +123,10 @@
             </div>
             </section>
     </div>
+
+
+<!-- seccion de la descripcion de la mascota de modo responsivo -->
+
     <div class="detalles-mascota">
         <section class="detalles-animal">
         <div class="detalle-animales" category="">
@@ -141,8 +156,13 @@
         </div>
 </div>
 
+   <!-- modo de pagina de texto -->
+
 <div class="container" style="min-height: 75vh; background-color: #F6D581; margin: 0px;" >
     <h1 id="title_dogs" style="text-align: center; padding-top: 20px; margin-bottom: 0px;  color: black;">quizás quieras conocer a</h1>
+
+<!-- modo responsivo del texto -->
+
 
     <div class="version_resp">
     <h1 id="title_dogs" style="text-align: center; padding-top: 20px; margin-bottom: 0px;  color: black;">quizás quieras conocer a</h1>
@@ -185,6 +205,8 @@
     </section>
 
 
+    <!-- Modo respondivo de catalogo  -->
+    
         <div id="carrusel">
           <a href="#" class="left-arrow"><img src="images/left-arrow.png" /></a>
           <a href="#" class="right-arrow"><img src="images/right-arrow.png" /></a>
