--- a/public/admin.html
+++ b/public/admin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Dog Cat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -19,6 +20,15 @@
 <tr>
 <th>Nombre:</th>
 <th><input class="input" type="text" id="nombre" placeholder="Nombre" /></th>
+</tr>
+<tr>
+  <th>Raza:</th>
+  <th>
+    <select class="input" id="raza">
+      <option>Perro</option>
+      <option>Gato</option>
+    </select>
+  </th>
 </tr>
 <tr>
 <th>Talla:</th>
@@ -116,6 +126,7 @@
             <th>Color</th>
             <th>Sexo</th>
             <th>Imagen</th>
+            <th>Raza</th>
             <th>Descripcion</th>
             <th>Razon</th>
             <th>Acciones</th>
