--- a/public/Description.html
+++ b/public/Description.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html >
 <head>
+    <meta charset="UTF-8">
     
     <title>Descripción mascota</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -83,7 +84,7 @@
 <!-- Script de carrusel del modo responsivo -->
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+<script src="js/jquery-3.3.1.min.js"></script>
 <script>
 var current = 0;
 var imagenes = new Array();
