--- a/public/Catalogo_cats.html
+++ b/public/Catalogo_cats.html
@@ -120,9 +120,7 @@ defer>
 
 
 <script src="js/jquery-3.3.1.min.js"></script>
-<script>
-
-</script>
+<script src="js/catalogo_cats.js"></script>
 
 
 
