--- a/public/admin.html
+++ b/public/admin.html
@@ -14,73 +14,77 @@
 <h4>FORMULARIO PARA AGREGAR UNA MASCOTA</h4>
 <p>Ingresa aquí los datos de la mascota que deseas dar en adopción</p>
 <div class="form-content">
-<form>
-<table style="border:none;">
-<thead>
-<tr>
-<th>Nombre:</th>
-<th><input class="input" type="text" id="nombre" placeholder="Nombre" /></th>
-</tr>
-<tr>
-  <th>Raza:</th>
-  <th>
-    <select class="input" id="raza">
-      <option>Perro</option>
-      <option>Gato</option>
+<form id="formParte1" name="formParte1" enctype="multipart/form-data" method="post">
+  <table style="border:none;">
+    <thead>
+    <tr>
+    <th>Nombre:</th>
+    <th><input name="valNombre" class="input" type="text" id="nombre" placeholder="Nombre" /></th>
+    </tr>
+    <tr>
+      <th>Raza:</th>
+      <th>
+        <select name="valRaza" class="input" id="raza">
+          <option value="perro">Perro</option>
+          <option value="gato">Gato</option>
+        </select>
+      </th>
+    </tr>
+    <tr>
+    <th>Talla:</th>
+    <th>
+    <select class="input" name="valTalla" id="talla">
+      <option value="Pequeño">Pequeño</option>
+      <option value="Mediano">Mediano</option>      
+      <option value="Grande">Grande</option>
     </select>
-  </th>
-</tr>
-<tr>
-<th>Talla:</th>
-<th>
-<select class="input" id="talla">
-<option>Cachorro</option>
-</select>
-</th>
-</tr>
-<tr>
-<th>Edad:</th>
-<th>
-<input class="input" type="number" id="edad" placeholder="Edad"/>
-</th>
-</tr>
-<tr>
-<th>Color:</th>
-<th><input class="input" type="text" id="color" placeholder="Color" /></th>
-</tr>
-<tr>
-<th>Sexo</th>
-<th>
-<select class="input" id="sexo">
-<option>Hembra</option>
-<option>Macho</option>
-</select>
-</th>
-</tr>
-<tr>
-<th>Fotografia</th>
-<th>
-<label for="upload-photo">
-<input type="file" id="upload-photo" accept="image/*"/>
-<span class="input" id="imagen">Examinar</span>
-</label>
-</th>
-</tr>
-</thead>
-<tbody>
-</tbody>
-</table>
+    </th>
+    </tr>
+    <tr>
+    <th>Edad:</th>
+    <th>
+    <input name="valEdad" class="input" type="number" id="edad" placeholder="Edad"/>
+    </th>
+    </tr>
+    <tr>
+    <th>Color:</th>
+    <th><input name="valColor" class="input" type="text" id="color" placeholder="Color" /></th>
+    </tr>
+    <tr>
+    <th>Sexo</th>
+    <th>
+    <select name="valSexo" class="input" id="sexo">
+    <option value="Hembra">Hembra</option>
+    <option value="Macho">Macho</option>
+    </select>
+    </th>
+    </tr>
+    <tr>
+      <th>Esterilizado</th>
+      <th>
+      <select name="valEst" class="input" id="esterilizado">
+      <option value="Sí">Sí</option>
+      <option value="No">No</option>
+      </select>
+      </th>
+      </tr>
+    <tr>
+    <th>Fotografia</th>
+    <th>
+    <label for="upload-photo">
+    <input name="valFoto" type="file" id="upload-photo" accept="image/*"/>
+    <span name="valFoto2" class="input" id="imagen">Examinar</span>
+    </label>
+    </th>
+    </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
 </form>
 <form>
-<div class="input-item">
-<label>Descripción:</label>
-<input class="input-form-right" type="text" id="descripcion" placeholder="Por favor, escribe aquí una breve descripción de la mascota (carácter, gustos, costumbres...)" />  
-</div>
-<div class="input-item">
-<label>Razón:</label>
-<input class="input-form-right" type="text" id="razon" placeholder="Por favor, escribe aquí el porqué deseas dar esta mascota en adopción..." />  
-</div>
-<button type="button" id="button-add-new" onclick="addnew()">Agregar</button>
+
+  <button type="button" id="button-add-new" onclick="addMascota()">Agregar</button>
 </form>
 </div>
 </div>
@@ -103,7 +107,7 @@
 <button onclick="window.location.href = 'Catalogo_cats.html'">Catálogo de gatos</button>
 </div>
 <button>Solicitudes de acogida</button>
-<button>Solicitudes de adopción</button>
+<button onclick="window.location.href = 'solicitudesAdopcion.html'">Solicitudes de adopción</button>
 <button>Donaciones</button>
 </nav>
 <div class="content-right">
@@ -119,26 +123,26 @@
         <thead>
           <tr>
             <!-- <th>&nbsp;</th> -->
-            <th>ID</th>
             <th>Nombre</th>
             <th>Talla</th>
             <th>Edad</th>
             <th>Color</th>
             <th>Sexo</th>
+            <th>Esteril</th>
             <th>Imagen</th>
             <th>Raza</th>
-            <th>Descripcion</th>
-            <th>Razon</th>
-            <th>Acciones</th>
+            <th>Eliminar</th>
           </tr>
       </thead>
       <tbody id="tab-body"></tbody>
     </table>
 </div>
 </div>
-<script type="module" src="js/backend.js"></script>
+<!--<script type="module" src="js/backend.js"></script>-->
+<script src="js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="js/hello.all.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<script src="js/admin.js"></script>
 <footer>
 </footer>
 </body>
