--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 </div>
 </div>
 </div>
-<script type="module" src="js/backend.js"></script>
+<!-- <script type="module" src="js/backend.js"></script>-->
 <script type="text/javascript" src="js/main.js"></script>
 <footer>
 </footer>
