--- a/public/admin.html
+++ b/public/admin.html
@@ -101,7 +101,7 @@
 <div class="header-icon"></div>
 <h1>ADMINISTRADOR</h1>
 </div>
-<button>Perfil</button>
+<button>Mascotas</button>
 <div class="submenu"><a>Catálogo de mascotas</a>
 <button onclick="window.location.href = 'Catalogo_dogs.html'">Catálogo de perros</button>
 <button onclick="window.location.href = 'Catalogo_cats.html'">Catálogo de gatos</button>
