--- a/public/solicitudesAdopcion.html
+++ b/public/solicitudesAdopcion.html
@@ -26,9 +26,8 @@
 <button onclick="window.location.href = 'Catalogo_dogs.html'">Catálogo de perros</button>
 <button onclick="window.location.href = 'Catalogo_cats.html'">Catálogo de gatos</button>
 </div>
-<button>Solicitudes de acogida</button>
 <button>Solicitudes de adopción</button>
-<button>Donaciones</button>
+<button onclick="window.location.href = 'donaciones.html'">Donaciones</button>
 </nav>
 <div class="content-right">
   <div id="image-right"></div>
