--- a/public/donaciones.html
+++ b/public/donaciones.html
@@ -84,7 +84,7 @@
 <div class="container">
 <div class="table">
     <table>
-        <caption>Gestión de mascotas</caption>
+        <caption>Gestión de donaciones</caption>
         <thead>
           <tr>
             <!-- <th>&nbsp;</th> -->
